# tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bump-version.ps1  bump-version.sh  index.html  package-lock.json  package.json  plan.md  push.ps1  push.sh  start.ps1  start.sh  tailwind.config.js  tsconfig.json  update_app_ui.py  update_tasks_ui.py  vite.config.ts
.github/workflows/: build.yml
docs/: AI_INTEGRATION_RESEARCH_2026-02-19.md  ARCHITECTURE.md  C2_ALGORITHM_PAPER.md  DESIGN.md  REQUIREMENTS.md  mobile-adaptation-plan.md  tracker_schema.sql  代码审查与修复记录-2026-04-18.md  优化项.md  数据库设计说明.md  用户视角评审.md
docs/优化项/: 2026-04-11-项目专项检查清单.md  code-review-2026-03.md  跨任务学习聚合.md
docs/功能设计/: AI预测任务创建建议.md
scripts/: prompt-eval.mjs  seed_fake_data.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  data.rs  focus_session.rs  habit.rs  health.rs  init.rs  learning.rs  mod.rs  notification.rs  pattern.rs  prediction.rs  project.rs  recurring.rs  settings.rs  statistics.rs  suggestion_trace.rs  sync.rs  task.rs  tray.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: mod.rs  prediction_engine.rs  prediction_scheduler.rs  recurring.rs  webdav.rs
src/__tests__/: subtask-reactivity.test.ts  taskStoreHistoryAutofill.test.ts  useSuggestionPanel.test.ts
src/assets/: base.css
src/components/: AppFeedbackLayer.vue  FocusModal.vue  HabitsModal.vue  NotificationCenter.vue  ProjectContextMenu.vue  ProjectFormPopover.vue  ReportModal.vue  SettingsModal.vue  TaskSubtreeItem.vue
src/composables/: useECharts.ts  useFocusModal.ts  useSuggestionPanel.ts  useTaskToggle.ts  useWhiteNoise.ts
src/router/: index.ts
src/services/: notification.ts  shortcutManager.ts  sound.ts
src/stores/: aiPendingJobs.ts  aiStore.ts  habitStore.ts  predictionStore.ts  settingsStore.ts  statisticsStore.ts  taskStore.ts  timerStore.ts  uiStore.ts
src/types/: domain.ts
src/utils/: date.ts  (+4 more)
(+90 files in other folders)
