[package]
name = "tracker"
version = "0.1.0"
description = "Smart Focus Tracker desktop app"
authors = ["zjz"]
edition = "2021"

[lib]
name = "tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-dialog = "2.6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
