[package]
name = "tracker"
version = "2.5.1"
description = "Smart Focus Tracker desktop app"
authors = ["zjz"]
edition = "2021"

[lib]
name = "tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "=2.3.3"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-dialog = "=2.6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-single-instance = "=2.4.1"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
